--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,10 +1,11 @@
 name: Metrics
 on:
-  # Schedule updates (each hour)
-  schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
+  schedule: [{cron: "0 */6 * * *"}]  # Run every 6 hours
   workflow_dispatch:
-  push: {branches: ["master", "main"]}
+  push:
+    branches:
+      - master
+      - main
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -15,18 +16,8 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          # The following scopes are required:
-          #  - public_access (default scope)
-          # The following additional scopes may be required:
-          #  - read:org      (for organization related metrics)
-          #  - read:user     (for user related data)
-          #  - read:packages (for some packages related data)
-          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
-
-          # Options
-          user: Peter-JXL
+          user: wangyuchen333
           template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: Asia/Shanghai
+          base: header, activity, community, repositories, languages, metadata  # Add or remove as needed
+          config_timezone: Asia/Shanghai  # Change timezone if necessary
