--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,9 +1,11 @@
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
 name: Metrics
 on:
-  schedule: [{cron: "0 * * * *"}]  # 每小时更新
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
-
 jobs:
   github-metrics:
     runs-on: ubuntu-latest
@@ -12,9 +14,18 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          #  - repo
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
           token: ${{ secrets.METRICS_TOKEN }}
 
-          # 选项
+          # Options
           template: classic
           base: header, activity, community, repositories, metadata
           base_hireable: yes
@@ -38,17 +49,15 @@ jobs:
           plugin_habits_languages_threshold: 0%
           plugin_repositories: yes
           plugin_repositories_order: featured, pinned, starred, random
-          plugin_screenshot: yes
-          plugin_screenshot_background: yes
-          plugin_screenshot_mode: image
-          plugin_screenshot_selector: body
-          plugin_screenshot_title: Screenshot
-          plugin_screenshot_viewport: '{"width": 1280, "height": 1280}'  # 使用字符串表示
-
           plugin_skyline: yes
           plugin_skyline_frames: 60
           plugin_skyline_quality: 0.5
-          plugin_skyline_settings: '{"url": "https://skyline.github.com/${login}/${year}", "ready": "[...document.querySelectorAll(\'span\')].map(span => span.innerText).includes(\'Share on Twitter\')", "wait": 1, "hide": "button, footer, a"}'  # 使用字符串表示
+          plugin_skyline_settings: {
+  "url": "https://skyline.github.com/${login}/${year}",
+  "ready": "[...document.querySelectorAll('span')].map(span => span.innerText).includes('Share on Twitter')",
+  "wait": 1,
+  "hide": "button, footer, a"
+}
 
           plugin_skyline_year: current-year
           plugin_stargazers: yes
