--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -107,6 +107,7 @@ jobs:
           plugin_reactions_limit_discussions_comments: 100
           plugin_reactions_limit_issues: 100
           plugin_sponsors: yes
+          plugin_sponsors_past: yes
           plugin_sponsors_sections: goal, list, about
           plugin_sponsors_size: 24
           plugin_sponsors_title: Sponsor Me!
@@ -117,8 +118,7 @@ jobs:
           plugin_stargazers_charts: yes
           plugin_stargazers_charts_type: graph
           plugin_stargazers_days: 14
-          plugin_stargazers_worldmap: yes
-          plugin_stargazers_worldmap_sample: 1
+          plugin_stargazers_worldmap_sample: 10
           plugin_starlists: yes
           plugin_starlists_limit: 2
           plugin_starlists_limit_languages: 8
