--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -62,7 +62,7 @@ jobs:
           plugin_gists: yes
           plugin_habits: yes
           plugin_habits_charts: yes
-          plugin_habits_charts_type: graph
+          plugin_habits_charts_type: classic
           plugin_habits_days: 14
           plugin_habits_from: 200
           plugin_habits_languages_limit: 8
@@ -106,7 +106,7 @@ jobs:
           plugin_reactions_limit_issues: 100
           plugin_stargazers: yes
           plugin_stargazers_charts: yes
-          plugin_stargazers_charts_type: graph
+          plugin_stargazers_charts_type: chartist
           plugin_stargazers_days: 14
           plugin_stargazers_worldmap_sample: 10
           plugin_starlists: yes
