--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,9 +1,11 @@
 name: generate animation
 
 on:
-  # run automatically every 2 hours
-  schedule:
-    - cron: "0 */2 * * *" 
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
+  workflow_dispatch:
+  push: {branches: ["master", "main"]}
   
   # allows to manually run the job at any time
   workflow_dispatch:
