--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -1,14 +1,9 @@
 name: generate animation
 
 on:
-  # Schedule updates (each hour)
   schedule: [{cron: "0 * * * *"}]
-  # Lines below let you run workflow manually and on each commit
   workflow_dispatch:
   push: {branches: ["master", "main"]}
-  
-  
-  
 
 jobs:
   generate:
@@ -16,9 +11,14 @@ jobs:
       contents: write
     runs-on: ubuntu-latest
     timeout-minutes: 5
-  
+
     steps:
-      # generates a snake game from a github user (<github_user_name>) contributions graph, output a svg animation at <svg_out_path>
+      - name: Check and create dist directory
+        run: |
+          if [ ! -d dist ]; then
+            mkdir dist
+          fi
+
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
@@ -26,10 +26,10 @@ jobs:
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
-  
-  
-      # push the content of <build_dir> to a branch
-      # the content will be available at https://raw.githubusercontent.com/<github_user>/<repository>/<target_branch>/<file> , or as github page
+
+      - name: List files
+        run: ls -R  # 列出当前目录中的所有文件
+
       - name: push github-contribution-grid-snake.svg to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
         with:
