--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -24,14 +24,14 @@ jobs:
         with:
           github_user_name: ${{ github.repository_owner }}
           outputs: |
-            dist/github-contribution-grid-snake.svg
-            dist/github-contribution-grid-snake-dark.svg?palette=github-dark
+            github-contribution-grid-snake.svg
+            github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: List files
         run: ls -R
 
       - name: push github-contribution-grid-snake.svg to the output branch
-        uses: crazy-max/ghaction-github-pages@v3.2.0  # 更新到最新版本
+        uses: crazy-max/ghaction-github-pages@v3.2.0 
         with:
           target_branch: output
           build_dir: dist
