--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -90,7 +90,7 @@ jobs:
           plugin_lines_repositories_limit: 3
           plugin_lines_sections: base
           plugin_people: yes
-          plugin_people_identicons: yes
+          plugin_people_identicons_hide: yes
           plugin_people_limit: 24
           plugin_people_shuffle: yes
           plugin_people_size: 28
@@ -106,7 +106,7 @@ jobs:
           plugin_reactions_limit_issues: 100
           plugin_stargazers: yes
           plugin_stargazers_charts: yes
-          plugin_stargazers_charts_type: chartist
+          plugin_stargazers_charts_type: classic
           plugin_stargazers_days: 14
           plugin_stargazers_worldmap_sample: 10
           plugin_starlists: yes
