--- a/.github/workflows/snake.yml
+++ b/.github/workflows/snake.yml
@@ -19,13 +19,34 @@ jobs:
             mkdir dist
           fi
 
-      - name: generate github-contribution-grid-snake.svg
-        uses: Platane/snk/svg-only@v3
+      - name: generate-snake-game-from-github-contribution-grid
+        uses: Platane/snk@v3.3.0
         with:
+          # github user name to read the contribution graph from (**required**)
+          # using action context var `github.repository_owner` or specified user
           github_user_name: ${{ github.repository_owner }}
+      
+          # list of files to generate.
+          # one file per line. Each output can be customized with options as query string.
+          #
+          #  supported options:
+          #  - palette:     A preset of color, one of [github, github-dark, github-light]
+          #  - color_snake: Color of the snake
+          #  - color_dots:  Coma separated list of dots color.
+          #                 The first one is 0 contribution, then it goes from the low contribution to the highest.
+          #                 Exactly 5 colors are expected.
           outputs: |
-            github-contribution-grid-snake.svg
-            github-contribution-grid-snake-dark.svg?palette=github-dark
+            dist/github-snake.svg
+            dist/github-snake-dark.svg?palette=github-dark
+            dist/ocean.gif?color_snake=orange&color_dots=#bfd6f6,#8dbdff,#64a1f4,#4b91f1,#3c7dd9
+
+      # - name: generate github-contribution-grid-snake.svg
+      #   uses: Platane/snk/svg-only@v3
+      #   with:
+      #     github_user_name: ${{ github.repository_owner }}
+      #     outputs: |
+      #       github-contribution-grid-snake.svg
+      #       github-contribution-grid-snake-dark.svg?palette=github-dark
 
       - name: List files
         run: ls -R
